stderr
JudgeMan.java:35: error: cannot find symbol
        if(straightCounter == 4){
           ^
  symbol:   variable straightCounter
  location: class JudgeMan
1 error
